fix: login using jwt

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=3000
 MONGODB_URI=mongodb+srv://tuanthanh2kk4:tuanthanh@cluster0.nzrns.mongodb.net/tuanthanh
 
 JWT_ACCESS_TOKEN=JUSTASECRET
-JWT_ACCESS_EXPIRE=6000s
+JWT_ACCESS_EXPIRE=1d
