--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=3000
-MONGODB_URI=mongodb+srv://tuanthanh2kk4:tuanthanh@cluster0.nzrns.mongodb.net/tuanthanh
+PORT=3600
+MONGODB_URI=mongodb+srv://tuanthanh2kk4:tuanthanh@cluster0.nzrns.mongodb.net/project_website_careers
 
 JWT_ACCESS_TOKEN=JUSTASECRET
 JWT_ACCESS_EXPIRE=1d
