--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^11.1.1",
     "api-query-params": "^5.4.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
